fixing layout of text, aligning button to centre

--- a/style.css
+++ b/style.css
@@ -105,23 +105,33 @@ nav{
     border-width:0.2em;
 }
 
+
+.features2 h1{
+    font-family: sans serif;
+    color: #105496;
+    font-size:30px;
+    text-align:center;
+    justify-content: space-between;
+}
 .features2 h2,h3,h4,h5{
-    font-family:sans-serif;
+    font-family: sans serif;
     color: #105496;
     font-size:20px;
-    justify-content:space-around;
+    justify-content:space-evenly;
 
 }
 .features2 h2{
     margin-left:auto;
     margin-right:auto;
     text-align: Left;
+   
 }
 
 .features2 h4{
     margin-left:auto;
     margin-right:auto;
     text-align: Left;
+    
 }
 .group1{
     margin-left:auto;
@@ -148,7 +158,7 @@ nav{
     text-align: Right;
 }
 .pill3{   
-    justify-content: center;
+
     align-items: center;
     background-color:#105496;
     font-display:white;
@@ -158,4 +168,6 @@ nav{
     margin:0.25em;
     border-radius: 0.5em;
     border-width:0.2em;
+    position:relative;
+    left:775px;
 }
